# capnp_generic_poc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  generic_python_server.py
capnproto-c++-0.10.3/: Makefile  capnp  capnp-afl-testcase  capnp-evolution-test  capnp-test  capnpc-c++  capnpc-capnp  config.h  config.status  configure  libtool
capnproto-c++-0.10.3/.libs/: capnp  capnp-afl-testcase  capnp-evolution-test  capnpc-c++  capnpc-capnp
capnproto-c++-0.10.3/cmake/: CapnProtoConfig.cmake  CapnProtoConfigVersion.cmake
capnproto-c++-0.10.3/pkgconfig/: capnp-json.pc  capnp-rpc.pc  capnp-websocket.pc  capnp.pc  capnpc.pc  kj-async.pc  kj-gzip.pc  kj-http.pc  kj-test.pc  kj-tls.pc  kj.pc
capnproto-c++-0.10.3/src/capnp/: dynamic.c++  test-import.capnp.h  test-import2.capnp.h  test.capnp.h
capnproto-c++-0.10.3/src/capnp/.deps/: afl-testcase.Po  any.Plo  arena.Plo  blob.Plo  c++.capnp.Plo  capability.Plo  capnp_test-any-test.Po  capnp_test-blob-test.Po  capnp_test-canonicalize-test.Po  capnp_test-capability-test.Po  capnp_test-common-test.Po  capnp_test-dynamic-test.Po  capnp_test-encoding-test.Po  capnp_test-endian-fallback-test.Po  capnp_test-endian-reverse-test.Po  capnp_test-endian-test.Po  capnp_test-ez-rpc-test.Po  capnp_test-fuzz-test.Po  capnp_test-layout-test.Po  capnp_test-membrane-test.Po  capnp_test-message-test.Po  capnp_test-orphan-test.Po  capnp_test-rpc-test.Po  capnp_test-rpc-twoparty-test.Po  capnp_test-schema-loader-test.Po  capnp_test-schema-parser-test.Po  dynamic.Plo  (+31 more)
src/: client.cpp  client_interface.capnp  generic.capnp  server.cpp
(+96 files in other folders)
